<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ndi_controllers</name>
    <version>0.1.0</version>
    <description>Controllers for NDI tracking systems</description>

    <maintainer email="user@todo.todo">user</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>rcutils</depend>
    <depend>realtime_tools</depend>
    <depend>ndi_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>eigen3_cmake_module</depend>
    <depend>Eigen3</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>controller_manager</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>